stap-2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __SIM__
  namespace: backend-workshop
  labels:
    workshop-owner: __NAAM__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __SIM__
  template:
    metadata:
      labels:
        app: __SIM__
        workshop-owner: __NAAM__
    spec:
      automountServiceAccountToken: false
__PULL_SECRET__
      containers:
        - name: app
          image: VUL_IMAGE_IN
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi

          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
