stap-2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __SIM__
  namespace: backend-workshop
  labels:
    workshop-owner: __NAAM__
spec:
  ingressClassName: __CLASS__
__TLS__
  rules:
    - host: VUL_HOST_IN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __SIM__
                port:
                  number: 80
